<resources>
    <string name="app_name">Business Card Contact</string>
    <string name="contact_list_title">Contact List</string>
    <!-- Strings for the Contact Detail Labels -->
    <string name="ContactPictureDesc">Contact Photo</string>
    <string name="ContactNameLbl">Name</string>
    <string name="ContactTitleLbl">Title</string>
    <string name="ContactCompanyLbl">Company</string>
    <string name="ContactDepartmentLbl">Department</string>
    <string name="ContactPhoneNumLbl">Phone Number</string>
    <string name="ContactPhoneExtLbl">Ext.</string>
    <string name="ContactFaxNumLbl">Fax Number</string>
    <string name="ContactEmailLbl">Email</string>
    <string name="ContactCompanyWebsiteLbl">Company Website</string>
    <string name="ContactNotesLbl">Additional Information</string>
    <string name="ContactBusinessCardLbl">Business Card</string>

    <!-- Hint Strings -->
    <string name="ParamDepartmentHintText">Division or Group</string>
    <string name="ParamNotesHintText">Additional Information</string>

    <!-- Strings for the Action Item Menu Options -->
    <string name="menu_new_contact">Add New Contact</string>
    <string name="menu_new_business_card">Add New Business Card</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="menu_delete_contact">Delete Contact</string>
    <string name="menu_save_changes">Save</string>
    <string name="menu_cancel_changes">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <!-- image chooser title -->
    <string name="img_chooser_title">Find an Image</string>

    <!-- Edit field orientation -->
    <string name="edit_field_orientation">vertical</string>
    <string name="edit_field_orientation2">horizontal</string>

    <!-- Default photo image (icon) name -->
    <string name="default_photo_img">R.drawable.ic_add_a_photo_holo_light</string>
    <string name="chooserContactImage">Select a contact image:</string>
    <string name="chooserBCImage">Select a business card image:</string>

    <!-- strings for the About dialog -->
    <string name="app_version">Version 1.3</string>
    <string name="app_date">December 3rd, 2015</string>
    <string name="about_authors">By Alex Pearson and Elizabeth Reed</string>
    <string name="about_title">About</string>
    <string name="about_ok_btn">Ok</string>

    <!-- strings for the color settings dialog -->
    <string name="settings_title">Select Color Theme</string>
    <string name="settings_color_theme_1">Teal</string>
    <string name="settings_color_theme_2">Sage</string>
    <string name="settings_color_theme_3">Ocean</string>
    <string name="settings_color_theme_4">Eggplant</string>
    <string name="settings_color_theme_5">Bubblegum</string>
    <string name="settings_color_theme_6">Cranberry</string>
    <string name="settings_color_theme_7">Monochrome</string>
    <string name="settings_color_theme_8">Standard</string>

    <!-- common strings -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Shared Preferences key strings -->
    <string name="saved_color_theme">edu.pdx.ece558_fall15.alex_elizabeth.businesscardcontact.PREFERENCE_COLOR_THEME</string>
    <string name="saved_color_theme_default">0</string>
    <string name="saved_ce_uuid">edu.pdx.ece558_fall15.alex_elizabeth.businesscardcontact.PREFERENCE_CE_UUID_DETAIL</string>
    <string name="action_unavailable">Action Unavailable</string>
    <string name="network_not_available">Network is not available, please connect to use this feature.</string>
    <string name="okay">Okay</string>
</resources>
