<?xml version="1.0" encoding="utf-8"?>
<!-- ScrollView used here to allow the detail layout to be scrolled in the window. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="?linearlayout_bg_main">
<!-- Linear Layout that contains all the contact detail fields -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- include the sub-layout here for the contact photo,
         contact name, title, company, and department -->
    <include layout="@layout/view_photo_and_name" />

    <!-- LinearLayout for the Phone Number widgets -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/detail_field_table_margin_right"
        android:layout_marginLeft="@dimen/detail_field_table_margin_left">
        <!-- Label for the phone number -->
        <TextView
            android:id="@+id/ContactPhoneNumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactPhoneNumLbl"
            style="?android:listSeparatorTextViewStyle"/>
        <!-- Phone number -->
        <TextView
            android:id="@+id/ContactPhoneNumVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/contact_field_margin_left"/>
        <!-- Label for the phone extension -->
        <TextView
            android:id="@+id/ContactPhoneExtLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactPhoneExtLbl"
            android:layout_marginLeft="@dimen/contact_field_margin_left"
            style="?android:listSeparatorTextViewStyle"/>
        <!-- phone extension -->
        <TextView
            android:id="@+id/ContactPhoneExtVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ext_field_padding"
            android:text=" "/>
    </LinearLayout>
    <!-- LinearLayout for the Fax number widgets -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/detail_field_table_margin_right"
        android:layout_marginLeft="@dimen/detail_field_table_margin_left">
        <!-- Label for the fax number -->
        <TextView
            android:id="@+id/ContactFaxNumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactFaxNumLbl"
            style="?android:listSeparatorTextViewStyle"/>
        <!-- Fax number -->
        <TextView
            android:id="@+id/ContactFaxNumVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/contact_field_margin_left"/>
    </LinearLayout>
    <!-- LinearLayout for the E-mail widgets -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/detail_field_table_margin_right"
        android:layout_marginLeft="@dimen/detail_field_table_margin_left">
        <!-- Label for the email -->
        <TextView
            android:id="@+id/ContactEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactEmailLbl"
            style="?android:listSeparatorTextViewStyle"/>
        <!-- Contact email -->
        <TextView
            android:id="@+id/ContactEmailVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/contact_field_margin_left"/>
    </LinearLayout>
    <!-- LinearLayout for the company website widgets -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/detail_field_table_margin_right"
        android:layout_marginLeft="@dimen/detail_field_table_margin_left">
        <!-- Label for the company website -->
        <TextView
            android:id="@+id/ContactCompanyWebsiteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactCompanyWebsiteLbl"
            style="?android:listSeparatorTextViewStyle"/>
        <!-- Company website -->
        <TextView
            android:id="@+id/ContactCompanyWebsiteVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/contact_field_margin_left"/>
    </LinearLayout>
    <!-- LinearLayout for the Additional Information widgets -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/detail_field_table_margin_right"
        android:layout_marginLeft="@dimen/detail_field_table_margin_left">
        <!-- Label for notes -->
        <TextView
            android:id="@+id/ContactNotesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactNotesLbl"
            style="?android:listSeparatorTextViewStyle"/>
        <!-- Notes -->
        <TextView
            android:id="@+id/ContactNotesVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/contact_field_margin_left"/>
    </LinearLayout>
    <!-- LinearLayout for the Business Card widgets -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/detail_field_table_margin_right"
        android:layout_marginLeft="@dimen/detail_field_table_margin_left">
        <!-- Label for the business card -->
        <TextView
            android:id="@+id/ContactBusinessCardLbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactBusinessCardLbl"
            style="?android:listSeparatorTextViewStyle"/>
        <!-- The business card image -->
        <ImageView
            android:id="@+id/ContactBusinessCardImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/picture_padding"
            android:paddingLeft="@dimen/picture_padding"
            android:paddingRight="@dimen/picture_padding"
            android:paddingTop="@dimen/picture_padding"
            android:contentDescription="@string/ContactPictureDesc"
            android:scaleType="centerInside"
            android:background="?photo_img_bg"
            android:cropToPadding="true"
            android:src="@drawable/ic_photo_camera_light" />
    </LinearLayout>

</LinearLayout>
</ScrollView>